--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 0;
     padding: 0;
 }
@@ -11,51 +11,50 @@ header {
     background-color: #333;
     color: #fff;
     padding: 10px 20px;
+
+    .logo img {
+        height: 50px;
+    }
+
+    nav {
+        display: flex;
+        justify-content: space-between;
+        flex-grow: 1;
+        margin: 0 20px;
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+        };
+        
+        li {
+            flex: 1;
+            margin: 0 10px;
+            text-align: center;
+            background-color: #444;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        a {
+            color: #fff;
+            text-decoration: none;
+            display: block;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    }
+
+    .search input {
+        padding: 5px;
+        font-size: 16px;
+    }
 }
 
-.logo img {
-    height: 50px;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    flex-grow: 1;
-    margin: 0 20px;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-}
-
-nav li {
-    flex: 1;
-    margin: 0 10px;
-    text-align: center;
-    background-color: #444;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-nav a {
-    color: #fff;
-    text-decoration: none;
-    display: block;
-}
-
-nav a:hover {
-    text-decoration: underline;
-}
-
-.search input {
-    padding: 5px;
-    font-size: 16px;
-}
 
 main {
     padding: 20px;
@@ -65,5 +64,18 @@ main {
     border: 1px solid #ccc;
     padding: 20px;
     margin-top: 20px;
-    min-height: 300px; /* Adjust as needed */
+    height: 60vh;
+
+    overflow-y: auto;
+
+    display: flex;
+    flex-wrap: wrap;
+
+    .content-section {
+        flex: 0 0 50%;
+        box-sizing: border-box;
+        height: 15vh;
+
+        background-color: darkred;
+    }
 }
